--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </script>
 </head>
 <body onload="checkPassword()">
-    <h1>检测中</h1>
+    <h1>欢迎访问摩天高楼年末总结</h1>
     <p>。。。</p>
 </body>
 </html>
