--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <script>
         function checkPassword() {
             const password = prompt("请输入密码访问此页面：");
-            if (password !== "siming_xjxqgzll_0424") { // 替换成你自己的密码
+            const password !== "siming_xjxqgzll_0424"
+
+            if (password === correctPassword) {
+            window.location.href = "本楼总结.html";
+            } else { 
                 alert("密码错误！再见👋");
-                window.location.href = "https://www.bing.com"; // 可替换为其他链接
+                window.location.href = "https://www.bing.com"; 
             }
         }
     </script>
 </head>
 <body onload="checkPassword()">
     <h1>欢迎访问摩天高楼年末总结</h1>
-    <p>。。。</p>
+    <p>跳转中。。。</p>
 </body>
 </html>
