--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script>
         function checkPassword() {
             const password = prompt("请输入密码访问此页面：");
-            const password !== "siming_xjxqgzll_0424"
+            const correctPassword !== "siming_xjxqgzll_0424"
 
             if (password === correctPassword) {
             window.location.href = "本楼总结.html";
