--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <script>
         function checkPassword() {
             const password = prompt("请输入密码访问此页面：");
-            const correctPassword !== "siming_xjxqgzll_0424"
+            const correctPassword = "siming_xjxqgzll_0424";
 
             if (password === correctPassword) {
-            window.location.href = "本楼总结.html";
+                window.location.href = "本楼总结.html";
             } else { 
                 alert("密码错误！再见👋");
                 window.location.href = "https://www.bing.com"; 
