--- a/司命的年度总结.html
+++ b/司命的年度总结.html
@@ -396,7 +396,7 @@
                     
                     // 加载中国地图数据
                     try {
-                        const response = await fetch('https://cdn.jsdelivr.net/npm/china-map-geojson@1.0.2/china.json');
+                        const response = await fetch('./china.json');
                         const mapData = await response.json();
                         echarts.registerMap('china', mapData);
                         console.log('地图数据加载成功');
