--- a/underdog的年度总结.html
+++ b/underdog的年度总结.html
@@ -154,7 +154,7 @@
     </style>
 </head>
 <body>
-    <a href="摩天大楼度年度总结-首页.html" class="back-button">返回首页</a>
+    <a href="index.html" class="back-button">返回首页</a>
     <div class="card">
         <h1>underdog的年度总结</h1>
         
