--- a/摩天大楼年度总结摩天大楼度年度总结 (截至2024-12-26）.html
+++ b/摩天大楼年度总结摩天大楼度年度总结 (截至2024-12-26）.html
@@ -210,7 +210,7 @@
     </style>
 </head>
 <body>
-    <a href="摩天大楼度年度总结-首页.html" class="back-btn">返回首页</a>
+    <a href="index.html" class="back-btn">返回首页</a>
     
     <h1>摩天大楼度年度总结
         <span style="font-size: 0.9em; color: #666;">
