--- a/司命的年度总结.html
+++ b/司命的年度总结.html
@@ -485,7 +485,7 @@
                             trigger: 'item',
                             formatter: function(params) {
                                 if (params.data && params.data.value > 0) {
-                                    return `${params.name}<br/>盖楼数：${params.data.value}`;
+                                    return `${params.name}<br/>盖楼：${params.data.value}`;
                                 }
                                 return params.name;
                             }
