--- a/index.html
+++ b/index.html
@@ -187,6 +187,12 @@
             case '130294434':
                 window.location.href = '司命☁的年度总结.html';
                 break;
+            case 'pixiaodan':
+                window.location.href = 'underdog的年度总结.html';
+                break;
+            case '189480748':
+                window.location.href = 'underdog的年度总结.html';
+                break;
             default:
                 alert('未找到对应的年度总结！');
                 break;
