--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
                 window.location.href = '司命☁的年度总结.html';
                 break;
             case 'pixiaodan':
-                window.location.href = 'underdog的年度总结.html';
+                window.location.href = '六扇门内的李银心的年度总结.html';
                 break;
             case '189480748':
-                window.location.href = 'underdog的年度总结.html';
+                window.location.href = 'Nothing的年度总结.html';
                 break;
             default:
                 alert('未找到对应的年度总结！');
