--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 window.location.href = '司命☁的年度总结.html';
                 break;
             case 'pixiaodan':
-                window.location.href = '六扇门内的李银心的年度总结.html';
+                window.location.href = '六扇门内李银心的年度总结.html';
                 break;
             case '189480748':
                 window.location.href = 'Nothing的年度总结.html';
