--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="feature-card" style="flex: 1;">
                 <h3>活跃度排行榜</h3>
                 <p>查看用户活跃度排名</p>
-                <a href="ranking.html" class="feature-button">查看排行榜</a>
+                <a href="pages/ranking.html" class="feature-button">查看排行榜</a>
             </div>
         </div>
     </div>
@@ -179,19 +179,19 @@
         
         switch(inputValue) {
             case '261080295':
-                window.location.href = 'underdog的年度总结.html';
+                window.location.href = 'pages/underdog的年度总结.html';
                 break;
             case '224114431':
-                window.location.href = '司命的年度总结.html';
+                window.location.href = 'pages/司命的年度总结.html';
                 break;
             case '130294434':
-                window.location.href = '司命☁的年度总结.html';
+                window.location.href = 'pages/司命☁的年度总结.html';
                 break;
             case 'pixiaodan':
-                window.location.href = '六扇门内李银心的年度总结.html';
+                window.location.href = 'pages/六扇门内李银心的年度总结.html';
                 break;
             case '189480748':
-                window.location.href = 'Nothing的年度总结.html';
+                window.location.href = 'pages/Nothing的年度总结.html';
                 break;
             default:
                 alert('未找到对应的年度总结！');
@@ -201,7 +201,7 @@
     }
 
     function viewBuildingSummary() {
-        window.location.href = '摩天大楼年度总结摩天大楼度年度总结 (截至2024-12-26）.html';
+        window.location.href = 'pages/摩天大楼年度总结摩天大楼度年度总结 (截至2024-12-26）.html';
     }
     </script>
 </body>
