--- a/pages/ranking.html
+++ b/pages/ranking.html
@@ -205,7 +205,7 @@
     </div>
 
     <div class="container">
-        <a href="index.html" class="back-button">返回首页</a>
+        <a href="../index.html" class="back-button">返回首页</a>
         
         <div class="rankings-container">
             <!-- 总发帖数排行 -->
