--- a/pages/六扇门内李银心的年度总结.html
+++ b/pages/六扇门内李银心的年度总结.html
@@ -154,7 +154,7 @@
     </style>
 </head>
 <body>
-    <a href="index.html" class="back-button">返回首页</a>
+    <a href="../index.html" class="back-button">返回首页</a>
     <div class="card">
         <h1>六扇门内李银心的年度总结</h1>
         
