--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="feature-card" style="flex: 1;">
                 <h3>活跃度排行榜</h3>
                 <p>查看用户活跃度排名</p>
-                <a href="ranking.html" class="feature-button">查看排行榜</a>
+                <a href="pages/ranking.html" class="feature-button">查看排行榜</a>
             </div>
         </div>
     </div>
