--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="feature-card" style="flex: 1;">
                 <h3>盖楼动态进度</h3>
                 <p>摸鱼唠嗑谁最行</p>
-                <a href="dynamic_posts.html" class="feature-button">榜首就是你</a>
+                <a href="pages/dynamic_posts.html" class="feature-button">榜首就是你</a>
             </div>
         </div>
     </div>
