--- a/dynamic_posts.html
+++ b/dynamic_posts.html
@@ -305,7 +305,7 @@
     <button class="award-button" title="查看颁奖台"></button>
 
     <div class="container">
-        <a href="/" class="back-button">返回首页</a>
+        <a href="../index.html" class="back-button">返回首页</a>
 
         <div class="chart-wrapper">
             <div class="chart-container">
