--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 </head>
 <body>
     <div class="header">
-        <h1>摩天大楼年度总结</h1>
-        <p>截至2024-12-26</p>
+        <h1>摩天大楼唠模榜</h1>
+        <p>截至2025-01-04</p>
     </div>
 
     <div class="container">
