--- a/pages/dynamic_posts.html
+++ b/pages/dynamic_posts.html
@@ -3,9 +3,9 @@
 <head>
     <title>盖楼动态进度</title>
     <meta charset="utf-8">
-    <script src="js/chart.umd.min.js"></script>
-    <script src="js/chartjs-plugin-datalabels.min.js"></script>
-    <script src="js/confetti.browser.min.js"></script>
+    <script src="../js/chart.umd.min.js"></script>
+    <script src="../js/chartjs-plugin-datalabels.min.js"></script>
+    <script src="../js/confetti.browser.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
