--- a/pages/dynamic_posts.html
+++ b/pages/dynamic_posts.html
@@ -524,7 +524,12 @@
                             max:250,//横向最大值，以此相对缩短柱状长度
                             grid: {
                                 display: false
-                            }
+                            },
+                            ticks: {
+                                display: false  // 隐藏x轴的刻度标签
+                            },
+                            border: {
+                                display: false  // 隐藏x轴的轴线
                         },
                         y: {
                             grid: {
