--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>摩天大楼度年度总结</title>
+    <title>Hello</title>
     <meta charset="utf-8">
     <style>
         body {
